tests/valid/enum.myth
enum Fruit: u8 {
    APPLE;
    BANANA;
}

fn main(): void {
    let x: Fruit = APPLE;
}
